// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render expenses summary with one expense. 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`Should correctly render expenses summary with two or more expenses. 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $23,454,365.72
  </h1>
</div>
`;
